--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 
-	<h1>dondanielfeliciano</h1>
+	<header>Don Daniel Feliciano</header>
 
+	<h1>Testing Static Pages</h1>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi eius sed ad ducimus amet voluptatum perferendis perspiciatis, quaerat accusantium repellat. Dignissimos iste delectus eius tenetur voluptas mollitia, ullam perspiciatis architecto rem itaque ab vel dolorem quas ut eveniet velit consectetur quos doloremque non expedita blanditiis beatae error sequi quae nobis. Ex, nihil ea nemo maxime, corrupti eveniet libero dolorem eum dignissimos id quibusdam, iste odit, placeat veritatis velit laborum deleniti!</p>
+	
 </body>
 </html>
